<resources>
    <string name="app_name">DesarrolloDeApplicacionSp</string>
    <string name="feedbacktitle">FeedBack</string>
    <string name="feedbackname">Nombre completo</string>
    <string name="form">Formulario</string>
    <string name="Descripcion">Descripción del Contacto</string>
    <string name="Fecha">Fecha de naciemiento</string>
    <string name="Email">Email</string>
    <string name="Telefono">Telefono</string>
    <string name="Submit">Submit</string>
    <string name="Editar">Editar</string>
    <string name="ConfirmInformation">ConfirmInformation</string>
    <string name="ConfirmarDatos">Confirmar Datos</string>
</resources>
